--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 0;
+  font-family: "Montserrat", sans-serif;
+  line-height: 24px;
+  letter-spacing: 0.1px;
 }
 
 /* 1 SECTION - NAVIGATION */
@@ -89,7 +93,7 @@
 }
 
 .web__header-content-text {
-  padding-top: 152px;
+  padding-top: 148px;
   padding-left: 130px;
   width: 573px;
   height: 386px;
@@ -98,15 +102,12 @@
 .web__header-content-info {
   display: flex;
   flex-direction: column;
-  gap: 30px;
-  padding-bottom: 30px;
 }
 
 .web__header-content-info h5 {
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
-  line-height: 24px;
   color: #96bb7c;
 }
 .web__header-content-info h1 {
@@ -116,6 +117,7 @@
   line-height: 80px;
   letter-spacing: 0.2px;
   color: #252b42;
+  margin: 0px;
 }
 
 .web__header-content-info h4 {
@@ -144,44 +146,110 @@
 .web__video {
   width: 1440px;
   height: 878px;
-  background-color: palevioletred;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .web__video-text {
   text-align: center;
+  height: 116px;
+  margin-top: 160px;
+  margin-bottom: 40px;
+  box-sizing: border-box;
 }
 
 .web__video-text h6 {
+  font-weight: 700;
+  font-size: 14px;
+  margin-bottom: 10px;
   color: #96bb7c;
 }
 
 .web__video-text h3 {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 32px;
+  margin-bottom: 10px;
   color: #252b42;
 }
 
 .web__video-text p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
   color: #737373;
 }
 
-.web__video-video {
+/* 2 SECTION - VIDEO */
+.web__video-card {
   display: flex;
+  justify-content: center;
+  margin-top: 80px;
+}
+
+.web__video-card-jpg {
+  border: 0px transparent;
+  border-radius: 20px;
+}
+
+/*dodaj div poniżej z button/
+.web__video-card-button {
+  width: 92.6px;
+  height: 92.6px;
+  background: #96bb7c;
+  border-radius: 73.6px;
+}
+
+/* 3 SECTION - JPG */
+.web__courses {
+  width: 1440px;
+  height: 761px;
+  display: flex;
+  justify-content: space-around;
   align-items: center;
 }
 
-.web__video-video-jpg {
-  border: 0px transparent;
-  border-radius: 20px;
-  height: 363px;
-  width: 688px;
+.web__courses-jpg {
+  height: 440.6px;
+  width: 376.9px;
 }
 
-.web__popular-courses {
-  width: 1440px;
-  height: 761px;
-  background-color: blue;
+/* 3 SECTION - TEXT */
+.web__courses-text {
+  height: 296px;
+  width: 381px;
+}
+
+.web__courses-text-line {
+  background-color: #e74040;
+  width: 94px;
+  height: 7px;
+}
+
+.web__courses-text h2 {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 50px;
+  color: #252b42;
+  margin-bottom: 35px;
+  width: 268px;
+}
+
+.web__courses-text p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #737373;
+  margin-bottom: 35px;
+  width: 345px;
+}
+
+.web__courses-text h6 {
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 24px;
+  color: #96bb7c;
 }
 
 .web__client-matters {
