--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
   font-family: "Montserrat", sans-serif;
   line-height: 24px;
   letter-spacing: 0.1px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 3px 8px;
 }
 
 h1,
@@ -94,6 +95,10 @@ li {
 .web__header-btn--primary {
   text-transform: uppercase;
   width: 111px;
+}
+
+.btn__pointer :hover {
+  cursor: pointer;
 }
 
 /* 1 SECTION - CONTENT */
@@ -206,12 +211,25 @@ li {
   border-radius: 20px;
 }
 
-/*dodaj div poniżej z button/
 .web__video-card-button {
   width: 92.6px;
   height: 92.6px;
   background: #96bb7c;
   border-radius: 73.6px;
+  position: absolute;
+  z-index: inherit;
+  margin-top: 136px;
+}
+
+.web__video-card-button a {
+  color: #ffffff;
+  position: absolute;
+  z-index: inherit;
+  margin-top: 35px;
+  margin-left: 35px;
+  font-size: 40px;
+  outline-color: #ffffff;
+  text-decoration: none;
 }
 
 /* 3 SECTION - JPG */
@@ -259,7 +277,7 @@ li {
   width: 345px;
 }
 
-.web__courses-text h6 {
+.web__courses-text a {
   text-decoration: none;
   font-weight: 700;
   font-size: 14px;
@@ -350,6 +368,8 @@ li {
   margin-top: 20px;
   border-radius: 3px;
   padding: 0px 10px 0px 10px;
+  position: absolute;
+  z-index: inherit;
 }
 
 .web__client-matters-box-column-photo-tag h6 {
@@ -427,18 +447,15 @@ li {
   font-size: 14px;
   font-weight: 700;
   letter-spacing: 0.2px;
-  text-align: right;
   color: #737373;
   width: 83px;
   margin-left: 25px;
   margin-bottom: 10px;
 }
 
-.web__client-matters-box-column-text-sale span {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.web__client-matters-box-column-text-sale i {
   color: #737373;
+  margin-right: 10px;
 }
 
 .web__client-matters-box-column-text-price {
@@ -460,9 +477,13 @@ li {
   border-radius: 37px;
   width: 117px;
   height: 28px;
+  position: absolute;
+  z-index: inherit;
+  padding: 10px 20px 10px 20px;
+  margin: 10px 20px 10px 20px;
 }
 
-.web__client-matters-box-column-text-button h6 {
+.web__client-matters-box-column-text-button a {
   color: #96bb7c;
   font-size: 14px;
   font-weight: 700;
@@ -473,6 +494,7 @@ li {
   justify-content: center;
   text-align: center;
   gap: 10px;
+  text-decoration: none;
 }
 
 .web__client-matters-box-column-text-button span {
